--- a/myportfolio/templates/projects/index.html
+++ b/myportfolio/templates/projects/index.html
@@ -47,7 +47,7 @@
                              <span></span>
                              <span></span>
                              <span></span>
-                           Disponible para trabajar
+                             Disponible para trabajar
                         </button>
                     </div>
                 </div>
@@ -174,11 +174,10 @@
     <section id="conocimientos-timeline" class="py-5 mt-5 pt-5">
         <h2 class="h2 text-center russo-one-regular py-5 mt-5 mb-5">Conocimientos</h2>
         <div class="container position-relative py-5">
-            <!-- Línea central -->
-            <div class="timeline-line"></div>
+
             <!-- Card 1 -->
             <div class="row g-4">
-                <div class="col-md-6 d-flex justify-content-end">
+                <div class="col-md-5 d-flex justify-content-end">
                     <div class="knowledge-card">
                         <h3>Experiencia 🪙</h3>
                         <h4>Software Developer - Abaco Developments</h4>
@@ -190,46 +189,72 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6 position-relative d-flex align-items-center">
-                    <div class="timeline-circle"></div>
+                <div class="col-md-2 d-flex align-items-center">
+                    <div class="timeline">
+                        <div class="timeline-line"></div>
+                        <div class="timeline-circle"></div>
+                    </div>
                 </div>
+                <div class="col-md-5"></div>
             </div>
+
             <!-- Card 2 -->
             <div class="row g-4">
-                <div class="col-md-6 position-relative d-flex align-items-center">
-                    <div class="timeline-circle"></div>
+                <div class="col-md-5"></div>
+                <div class="col-md-2 d-flex align-items-center">
+                    <div class="timeline">
+                        <div class="timeline-line"></div>
+                        <div class="timeline-circle"></div>
+                    </div>
                 </div>
-                <div class="col-md-6 d-flex justify-content-start">
+                <div class="col-md-5 d-flex justify-content-start">
                     <div class="knowledge-card">
                         <h3>Certificaciones 📜</h3>
-                        <h4>The Complete Python Pro Bootcamp</h4>
-                        <p>Angela Yu | Junio 2024 - Septiembre 2024</p>
-                        <h4>Python and Django FullStack Web Developer Bootcamp</h4>
+                        <h4>
+                            <img src="{% static 'images/tecnologias/udemy.svg' %}" alt="udemy" class="icon-ud">
+                            Python and Django FullStack Developer Bootcamp
+                        </h4>
                         <p>Jose Portilla | Octubre 2024 - Noviembre 2024</p>
+
+                        <h4 class="mt-4 pt-2">
+                            <img src="{% static 'images/tecnologias/udemy.svg' %}" alt="udemy" class="icon-ud">
+                            The Complete Python Pro Bootcamp
+                        </h4>
+                        <p>Angela Yu | Junio 2024 - Septiembre 2024</p>
                     </div>
                 </div>
             </div>
+
             <!-- Card 3 -->
             <div class="row g-4">
-                <div class="col-md-6 d-flex justify-content-end">
+                <div class="col-md-5 d-flex justify-content-end">
                     <div class="knowledge-card">
                         <h3>Formación 📚</h3>
                         <h4>C.F.G.S. Desarrollo de Aplicaciones Multiplataforma</h4>
                         <p>IES Vista Alegre | Septiembre 2022 - Junio 2024</p>
-                        <h4>Grado en Arte Dramático</h4>
+                        <h4 class="mt-4 pt-2">Grado en Arte Dramático</h4>
                         <p>E.S.A.D. de Sevilla | Septiembre 2015 - Junio 2019</p>
                     </div>
                 </div>
-                <div class="col-md-6 position-relative d-flex align-items-center">
-                    <div class="timeline-circle"></div>
+                <div class="col-md-2 d-flex align-items-center">
+                    <div class="timeline">
+                        <div class="timeline-line"></div>
+                        <div class="timeline-circle"></div>
+                    </div>
                 </div>
+                <div class="col-md-5"></div>
             </div>
+
             <!-- Card 4 -->
             <div class="row g-4">
-                <div class="col-md-6 position-relative d-flex align-items-center">
-                    <div class="timeline-circle"></div>
+                <div class="col-md-5"></div>
+                <div class="col-md-2 d-flex align-items-center">
+                    <div class="timeline">
+                        <div class="timeline-line"></div>
+                        <div class="timeline-circle"></div>
+                    </div>
                 </div>
-                <div class="col-md-6 d-flex justify-content-start">
+                <div class="col-md-5 d-flex justify-content-start">
                     <div class="knowledge-card">
                         <h3>Aprendiendo 💡</h3>
                         <div class="tech-grid">
@@ -243,7 +268,6 @@
             </div>
         </div>
     </section>
-
 
 </div>
 
