--- a/myportfolio/templates/projects/base.html
+++ b/myportfolio/templates/projects/base.html
@@ -45,7 +45,7 @@
     </div>
 </nav>
 
-    <div class="container flex-grow-1 markazi-text">
+    <div class="container flex-grow-1">
         {% block body_block %}
 
         {% endblock %}
